Edited wiki page DocumentationSidebar through web user interface.

--- a/wiki/DocumentationSidebar.wiki
+++ b/wiki/DocumentationSidebar.wiki
@@ -1,8 +1,13 @@
-[Articles HOWTO articles]
-    * [ArticlesXSS Web security]
-    * [ArticlesDom DOM manipulation]
-    * [ArticlesStyle CSS and style]
-    * [ArticlesTips Tips and tricks]
-  * [DOMReference DOM reference]
-  * [HTMLElements HTML reference]
-  * [CSSReference CSS reference]
+* [OverviewOfProject]
+* [InterfaceSketches Interface Sketches]
+* [ProjectHistory Timeline and Deliverables]
+* [ProjectInfrastructureAndRequirements Infrastructure]
+* [ProjectArchitecture Architecture Overview]
+* [DetailedDesignDocumentation Detailed Architecture]
+* [ProjectDependencies Dependencies]
+* [WebsiteManagement Web Site Management
+* [GettingStartedWithCode How To Start Working]
+* [ModificationInstructions Adding to the Project]
+* [ReleasePreparation Release Preparation]
+* [TestPlans Testing Plans]
+* [Pitfalls Common Pitfalls]
