Edited wiki page OverviewOfProject through web user interface.

--- a/wiki/OverviewOfProject.wiki
+++ b/wiki/OverviewOfProject.wiki
@@ -9,7 +9,7 @@ Project Advisor: Dr. G. Elisabeta Marai
 Systems Biology Collaborator: Dr. James R. Faeder
 
 Code Location:
-1.!* is hosted on arsenic.cs.pitt.edu in /afs/cs.pitt.edu/projects/marai/gfx3/Projects/BioDiagrams/svn/BioDiagrams and is only accessible with an approved afs account.  Soon the code will be moved to googlecode.
+Version 1.\* is hosted on arsenic.cs.pitt.edu in /afs/cs.pitt.edu/projects/marai/gfx3/Projects/BioDiagrams/svn/BioDiagrams and is only accessible with an approved afs account.  Soon the code will be moved to googlecode.
 
 2.!* code is all hosted on google code. 
 
