Edited wiki page DocumentationSidebar through web user interface.

--- a/wiki/DocumentationSidebar.wiki
+++ b/wiki/DocumentationSidebar.wiki
@@ -1,4 +1,5 @@
  * [OverviewOfProject Project Goals]
+ * [Specifications]
  * [InterfaceSketches Interface Sketches]
  * [ProjectHistory Timeline and Deliverables]
  * [ProjectInfrastructureAndRequirements Infrastructure]
