Edited wiki page TimeLineSummer2010 through web user interface.

--- a/wiki/TimeLineSummer2010.wiki
+++ b/wiki/TimeLineSummer2010.wiki
@@ -8,8 +8,10 @@ Dr. James Faeder and his research group will work with us as we continue to deve
 
  * *Cellular Network Visualization*: For this summer, one of the most important tasks is to develop a framework that allows for simple generation and rendering of graph-based visualizations of molecular networks, since many of the desired visualizations depend on this ability. I have been testing the Prefuse library 2 with some success. It allows for interactive visualizations, various automatic layouts, and is easily extendable. The code is open source under the BSD license so I can tweak it as needed.
 
- * *Contact Map*: The contact map should be fully implemented according to current specifications with user interaction and data on demand. The current contact map displays molecules with internal bonding sites. An edge between sites creates a bond that corresponds to one or more rule that can potentially be applied to the molecules linked by the bond.
+ * *Contact Map*: 
+ **The contact map should be fully implemented according to current specifications with user interaction and data on demand. The current contact map displays molecules with internal bonding sites. An edge between sites creates a bond that corresponds to one or more rule that can potentially be applied to the molecules linked by the bond.
   ** Users will be able to interact with molecules through mouse clicks to highlight all interactions, view parameters for that molecule, and see other data as we further design the interactions. Mouse interactions with bonds will display bubbleset information corresponding to the content and context of the rule corresponding to the bond.
+
 Refine BubbleSets: The marching squares algorithm utilized by bubblesets currently encloses any area that has a positive energy value. This needs to be changed in order to allow for an energy threshold. Also, the energy creation and destruction values need to be balanced. Ultimately, the bubblesets implementation needs to serve as a method for highlighting independently located subsets of bonding sites. All implementation should work towards this functional goal.
 Automatic Visualization Updates: The Bioinformatics group has requested that the BNG IDE automatically build their models and update the contact map as they are working. This should not be a problem. Even if it is uncomfortably slow to parse and build a model we can balance the frequency of automatic building.
 Syntax Highlighting Additional simple syntax highlighting of special characters ‘(’, ‘)’, ‘.’, ‘,’, ‘*’, ‘!’, and ‘+’ should be a quick and simple task.
