--- a/wiki/TimeLineSummer2010.wiki
+++ b/wiki/TimeLineSummer2010.wiki
@@ -2,7 +2,7 @@
 
 ==Plan==
 
-The BioNetGen IDE project provides a graphical front end to the !BioNetGen rule-based modeler and simulator. Users create models of molecules and interaction rules that can be executed in the simulator. The simulation produces observables that are of interest to the researcers. Current problems where visualization is desired include debugging of models and rules, viewing observables at various stages of simulation, and analyzing simulation results. Each visualization problem may be solved with 2D models of molecular structure, interactions with visualizations, and data on demand, all of which will be tightly coupled to the IDE GUI itself. In addition to visualization, many features required by a robust IDE still need to implemented such as syntax highlighting, multiple window environments, better file handling, and greater stability.
+The !BioNetGen IDE project provides a graphical front end to the !BioNetGen rule-based modeler and simulator. Users create models of molecules and interaction rules that can be executed in the simulator. The simulation produces observables that are of interest to the researcers. Current problems where visualization is desired include debugging of models and rules, viewing observables at various stages of simulation, and analyzing simulation results. Each visualization problem may be solved with 2D models of molecular structure, interactions with visualizations, and data on demand, all of which will be tightly coupled to the IDE GUI itself. In addition to visualization, many features required by a robust IDE still need to implemented such as syntax highlighting, multiple window environments, better file handling, and greater stability.
 
 Dr. James Faeder and his research group will work with us as we continue to develop the IDE with functionality including text editing, parsing, model visualization, incorporation with their simulators, and results visualization. Additionally, this project will serve as part of the requirements of my Masters degree.
 
@@ -86,7 +86,7 @@ Contact map with interaction including bubblesets: The majority of the added imp
   ** Use Prefuse for visualization.
   ** Solve scalability issues.
 
-* New Features
+ * New Features
   ** Incorporate Cellucidate API and include translation capabilities from Kappa to BNGL.
   ** Include statistical model constructors such as Inferelator, Banjo, and CLR.
   ** Support Systems Biology Markup Language or Biological Pathway Exchange Languauge input/output.
