Edited wiki page DocumentationSidebar through web user interface.

--- a/wiki/DocumentationSidebar.wiki
+++ b/wiki/DocumentationSidebar.wiki
@@ -12,3 +12,4 @@
  * [ReleasePreparation Release Preparation]
  * [TestPlans Testing Plans]
  * [Pitfalls Common Pitfalls]
+ * [RandomHowTos Random How-Tos]
