--- a/wiki/ProjectInfrastructureAndRequirements.wiki
+++ b/wiki/ProjectInfrastructureAndRequirements.wiki
@@ -1,3 +1,48 @@
-#summary which file system, which web server, languages, APIs etc
+#summary which file system, languages, APIs etc
 
-= Coming Soon... =
+= Infrastructure =
+
+==Version 1.*==
+
+===Source Code===
+RuleBender is written in Java and is cross-platform for use and development.  
+
+===Frameworks===
+Prefuse: prefuse.org.  Prefuse is a visualization framework that allows for the definition of visual models, rendering, and interaction.  It is used for the Contact Map, Influence Graph, and Species Browser.
+
+SWT: http://www.eclipse.org/swt/.  SWT is a windowing toolkit written by IBM.  It requires the version of swt.jar that is native to whatever system is running RuleBender.
+
+JFreeChart: http://www.jfree.org/jfreechart/
+
+JFace: http://wiki.eclipse.org/index.php/JFace
+
+===Jar Libraries===
+com.ibm.icu.jar
+gnujaxp.jar
+itext-2.0.6.jar
+javax.servlet.jar
+jcommon-1.0.12.jar
+jfreechart-1.0.9-experimental.jar
+jfreechart-1.0.9-swt.jar
+jfreechart-1.0.9.jar
+junit-4.10.jar
+org.eclipse.core.commands.jar
+org.eclipse.core.contenttype.jar
+org.eclipse.core.jobs.jar
+org.eclipse.core.runtime.compatibility.auth.jar
+org.eclipse.core.runtime.compatibility.registry.jar
+org.eclipse.core.runtime.jar
+org.eclipse.equinox.app.jar
+org.eclipse.equinox.common.jar
+org.eclipse.equinox.preferences.jar
+org.eclipse.equinox.registry.jar
+org.eclipse.jface.jar
+org.eclipse.jface.text.jar
+org.eclipse.osgi.jar
+org.eclipse.osgi.services.jar
+org.eclipse.swt.jar
+org.eclipse.text.jar
+prefuse.jar
+servlet.jar
+swtgraphics2d.jar
+swt.jar (must be native)
