--- a/wiki/ProjectArchitecture.wiki
+++ b/wiki/ProjectArchitecture.wiki
@@ -1,6 +1,6 @@
 #summary sketch of overall design
 
-= Simple Sketch of RuleBender and library interaction =
+= Simple Sketch of !RuleBender and library interaction =
 
 
 http://code.google.com/p/rulebender/source/browse/trunk/docs/arch/SimpleArchitecture-small.png
