--- a/wiki/ProjectArchitecture.wiki
+++ b/wiki/ProjectArchitecture.wiki
@@ -2,4 +2,4 @@
 
 = Simple Sketch of !RuleBender and library interaction =
 
-[http://rulebender.googlecode.com/files/rulebender-full.png http://rulebender.googlecode.com/files/rulebender-full.png]
+http://rulebender.googlecode.com/files/rulebender-full.png [http://rulebender.googlecode.com/files/rulebender-full.png Full Size Link]
