--- a/wiki/ProjectArchitecture.wiki
+++ b/wiki/ProjectArchitecture.wiki
@@ -2,4 +2,6 @@
 
 = Simple Sketch of !RuleBender and library interaction =
 
-[http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png]
+
+http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png 
+[http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png Link To File]
