Edited wiki page ProjectArchitecture through web user interface.

--- a/wiki/ProjectArchitecture.wiki
+++ b/wiki/ProjectArchitecture.wiki
@@ -4,4 +4,6 @@
 
 
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png 
-[http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png Link To File]
+
+
+[http://code.google.com/p/rulebender/svn/wiki/imgs/arch/SimpleArchitecture.png Link To File]
