--- a/wiki/ProjectArchitecture.wiki
+++ b/wiki/ProjectArchitecture.wiki
@@ -6,4 +6,4 @@
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png 
 
 
-[http://code.google.com/p/rulebender/svn/wiki/imgs/arch/SimpleArchitecture.png Link To File]
+[http://rulebender.googlecode.com/svn/wiki/imgs/arch/SimpleArchitecture.png  Link To File]
