Fixed wiki pages

--- a/wiki/PackageDependencyRulebenderCoreWorkspace.wiki
+++ b/wiki/PackageDependencyRulebenderCoreWorkspace.wiki
@@ -1,4 +1,4 @@
 #summary package dependency for rulebender.core.workspace
 = Package dependency graph for rulebender.core.workspace=
-For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the RuleBender class files.
+For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the !RuleBender class files.
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/rulebender.core.workspace.png
