--- a/wiki/PackageDependencyRulebenderSimulateBngexecution.wiki
+++ b/wiki/PackageDependencyRulebenderSimulateBngexecution.wiki
@@ -1,4 +1,4 @@
 #summary package dependency for rulebender.simulate.bngexecution
 = Package dependency graph for rulebender.simulate.bngexecution=
-For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the RuleBender class files.
+For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the !RuleBender class files.
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/rulebender.simulate.bngexecution.png
