--- a/wiki/PackageDependencyDeRalfebertRcpToolsPreferredperspective.wiki
+++ b/wiki/PackageDependencyDeRalfebertRcpToolsPreferredperspective.wiki
@@ -1,4 +1,4 @@
 #summary package dependency for de.ralfebert.rcp.tools.preferredperspective
 = Package dependency graph for de.ralfebert.rcp.tools.preferredperspective=
-For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the RuleBender class files.
+For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the !RuleBender class files.
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/de.ralfebert.rcp.tools.preferredperspective.png
