--- a/wiki/PackageDependencyRulebenderCorePrefuseCollinsbubblesetLib.wiki
+++ b/wiki/PackageDependencyRulebenderCorePrefuseCollinsbubblesetLib.wiki
@@ -1,4 +1,4 @@
 #summary package dependency for rulebender.core.prefuse.collinsbubbleset.lib
 = Package dependency graph for rulebender.core.prefuse.collinsbubbleset.lib=
-For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the RuleBender class files.
+For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the !RuleBender class files.
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/rulebender.core.prefuse.collinsbubbleset.lib.png
