--- a/wiki/PackageDependencyRulebenderEditorsSimple.wiki
+++ b/wiki/PackageDependencyRulebenderEditorsSimple.wiki
@@ -1,4 +1,4 @@
 #summary package dependency for rulebender.editors.simple
 = Package dependency graph for rulebender.editors.simple=
-For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the RuleBender class files.
+For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the !RuleBender class files.
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/rulebender.editors.simple.png
