--- a/wiki/PackageDependencyRulebenderSimulate.wiki
+++ b/wiki/PackageDependencyRulebenderSimulate.wiki
@@ -1,4 +1,4 @@
 #summary package dependency for rulebender.simulate
 = Package dependency graph for rulebender.simulate=
-For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the RuleBender class files.
+For class level and interactive graphs, use the CDA tool (http://www.dependency-analyzer.org/) on the !RuleBender class files.
 http://rulebender.googlecode.com/svn/wiki/imgs/arch/rulebender.simulate.png
