Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -5,53 +5,53 @@
  * [ProjectInfrastructureAndRequirements Infrastructure]
  * [ProjectArchitecture Architecture Overview]
  * [DetailedDesignDocumentation Detailed Architecture]
-  * [PackageDependencyDeRalfebertRcpToolsPreferredperspective DeRalfebertRcpToolsPreferredperspective]
-  * [PackageDependencyRulebender-full Rulebender-full]
-  * [PackageDependencyRulebenderContactmapModels RulebenderContactmapModels]
-  * [PackageDependencyRulebenderContactmapPrefuse RulebenderContactmapPrefuse]
-  * [PackageDependencyRulebenderContactmapProperties RulebenderContactmapProperties]
-  * [PackageDependencyRulebenderContactmapTest RulebenderContactmapTest]
-  * [PackageDependencyRulebenderContactmapView RulebenderContactmapView]
-  * [PackageDependencyRulebenderCoreCommands RulebenderCoreCommands]
-  * [PackageDependencyRulebenderCoreEditorhider RulebenderCoreEditorhider]
-  * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetControl RulebenderCorePrefuseCollinsbubblesetControl]
-  * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetLayout RulebenderCorePrefuseCollinsbubblesetLayout]
-  * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetLib RulebenderCorePrefuseCollinsbubblesetLib]
-  * [PackageDependencyRulebenderCorePrefuseNetworkviewerContactmap RulebenderCorePrefuseNetworkviewerContactmap]
-  * [PackageDependencyRulebenderCorePrefuseNetworkviewerInfluencegraph RulebenderCorePrefuseNetworkviewerInfluencegraph]
-  * [PackageDependencyRulebenderCorePrefuseNetworkviewer RulebenderCorePrefuseNetworkviewer]
-  * [PackageDependencyRulebenderCorePrefuse RulebenderCorePrefuse]
-  * [PackageDependencyRulebenderCoreUtility RulebenderCoreUtility]
-  * [PackageDependencyRulebenderCoreWorkspace RulebenderCoreWorkspace]
-  * [PackageDependencyRulebenderEditorsBnga RulebenderEditorsBnga]
-  * [PackageDependencyRulebenderEditorsBngaText RulebenderEditorsBngaText]
-  * [PackageDependencyRulebenderEditorsBnglModel RulebenderEditorsBnglModel]
-  * [PackageDependencyRulebenderEditorsBngl RulebenderEditorsBngl]
-  * [PackageDependencyRulebenderEditorsCommon RulebenderEditorsCommon]
-  * [PackageDependencyRulebenderEditorsNet RulebenderEditorsNet]
-  * [PackageDependencyRulebenderEditorsSimple RulebenderEditorsSimple]
-  * [PackageDependencyRulebenderInfluencegraphModels RulebenderInfluencegraphModels]
-  * [PackageDependencyRulebenderInfluencegraphPrefuse RulebenderInfluencegraphPrefuse]
-  * [PackageDependencyRulebenderInfluencegraphView RulebenderInfluencegraphView]
-  * [PackageDependencyRulebenderNavigatorActions RulebenderNavigatorActions]
-  * [PackageDependencyRulebenderNavigatorModel RulebenderNavigatorModel]
-  * [PackageDependencyRulebenderNavigatorModel2 RulebenderNavigatorModel2]
-  * [PackageDependencyRulebenderNavigatorViews RulebenderNavigatorViews]
-  * [PackageDependencyRulebender Rulebender]
-  * [PackageDependencyRulebenderPreferences RulebenderPreferences]
-  * [PackageDependencyRulebenderPreferencesViews RulebenderPreferencesViews]
-  * [PackageDependencyRulebenderResultsView RulebenderResultsView]
-  * [PackageDependencyRulebenderSimulateBngexecution RulebenderSimulateBngexecution]
-  * [PackageDependencyRulebenderSimulateParameterscan RulebenderSimulateParameterscan]
-  * [PackageDependencyRulebenderSimulate RulebenderSimulate]
-  * [PackageDependencyRulebenderSimulateView RulebenderSimulateView]
-  * [PackageDependencyRulebenderSpeciesgraphPrefuse RulebenderSpeciesgraphPrefuse]
-  * [PackageDependencyRulebenderSpeciesgraphView RulebenderSpeciesgraphView]
-  * [PackageDependencyRulebenderSpecieslistView RulebenderSpecieslistView]
-  * [PackageDependencyRulebenderTextParserAstreader RulebenderTextParserAstreader]
-  * [PackageDependencyRulebenderViews RulebenderViews]
+  * [PackageDependencyRulebender-full All Packages]
+  * [PackageDependencyRulebenderContactmapModels rulebender.contactmap.models]
+  * [PackageDependencyRulebenderContactmapPrefuse rulebender.contactmap.prefuse]
+  * [PackageDependencyRulebenderContactmapProperties rulebender.contactmap.properties]
+  * [PackageDependencyRulebenderContactmapTest rulebender.contactmap.test]
+  * [PackageDependencyRulebenderContactmapView rulebender.contactmap.view]
+  * [PackageDependencyRulebenderCoreCommands rulebender.core.commands]
+  * [PackageDependencyRulebenderCoreEditorhider rulebender.core.editorhider]
+  * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetControl rulebender.core.prefuse.collinsbubbleset.control]
+  * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetLayout rulebender.core.prefuse.collinsbubbleset.layout]
+  * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetLib rulebender.core.prefuse.collinsbubbleset.lib]
+  * [PackageDependencyRulebenderCorePrefuseNetworkviewerContactmap rulebender.core.prefuse.networkviewer.contactmap]
+  * [PackageDependencyRulebenderCorePrefuseNetworkviewerInfluencegraph rulebender.core.prefuse.networkviewer.influencegraph]
+  * [PackageDependencyRulebenderCorePrefuseNetworkviewer rulebender.core.prefuse.networkviewer]
+  * [PackageDependencyRulebenderCorePrefuse rulebender.core.prefuse]
+  * [PackageDependencyRulebenderCoreUtility rulebender.core.utility]
+  * [PackageDependencyRulebenderCoreWorkspace rulebender.core.workspace]
+  * [PackageDependencyRulebenderEditorsBnga rulebender.editors.bnga]
+  * [PackageDependencyRulebenderEditorsBngaText rulebender.editors.bnga.text]
+  * [PackageDependencyRulebenderEditorsBnglModel rulebender.editors.bngl.model]
+  * [PackageDependencyRulebenderEditorsBngl rulebender.editors.bngl]
+  * [PackageDependencyRulebenderEditorsCommon rulebender.editors.common]
+  * [PackageDependencyRulebenderEditorsNet rulebender.editors.net]
+  * [PackageDependencyRulebenderEditorsSimple rulebender.editors.simple]
+  * [PackageDependencyRulebenderInfluencegraphModels rulebender.influencegraph.models]
+  * [PackageDependencyRulebenderInfluencegraphPrefuse rulebender.influencegraph.prefuse]
+  * [PackageDependencyRulebenderInfluencegraphView rulebender.influencegraph.view]
+  * [PackageDependencyRulebenderNavigatorActions rulebender.navigator.actions]
+  * [PackageDependencyRulebenderNavigatorModel rulebender.navigator.model]
+  * [PackageDependencyRulebenderNavigatorModel2 rulebender.navigator.model2]
+  * [PackageDependencyRulebenderNavigatorViews rulebender.navigator.views]
+  * [PackageDependencyRulebender rulebender]
+  * [PackageDependencyRulebenderPreferences rulebender.preferences]
+  * [PackageDependencyRulebenderPreferencesViews rulebender.preferences.views]
+  * [PackageDependencyRulebenderResultsView rulebender.results.view]
+  * [PackageDependencyRulebenderSimulateBngexecution rulebender.simulate.bngexecution]
+  * [PackageDependencyRulebenderSimulateParameterscan rulebender.simulate.parameterscan]
+  * [PackageDependencyRulebenderSimulate rulebender.simulate]
+  * [PackageDependencyRulebenderSimulateView rulebender.simulate.view]
+  * [PackageDependencyRulebenderSpeciesgraphPrefuse rulebender.speciesgraph.prefuse]
+  * [PackageDependencyRulebenderSpeciesgraphView rulebender.speciesgraph.view]
+  * [PackageDependencyRulebenderSpecieslistView rulebender.specieslist.view]
+  * [PackageDependencyRulebenderTextParserAstreader rulebender.text.parser.astreader]
+  * [PackageDependencyRulebenderViews rulebender.views]
   * [PackageDependencySimpleArchitecture SimpleArchitecture]
-  * [PackageDependencyZaCoQuirkLayout ZaCoQuirkLayout] * [ProjectDependencies Dependencies]
+  * [PackageDependencyZaCoQuirkLayout za.co.quirk.layout]
+  * [PackageDependencyDeRalfebertRcpToolsPreferredperspective de.ralfebert.rcp.tools.preferredperspective]
  * [WebsiteManagement Web Site Management]
  * [GettingStartedWithCode How To Start Working]
  * [ModificationInstructions Adding to the Project]
