Edited wiki page DocumentationSidebar through web user interface.

--- a/wiki/DocumentationSidebar.wiki
+++ b/wiki/DocumentationSidebar.wiki
@@ -1,4 +1,4 @@
- * [OverviewOfProject Project Goals]
+ * [OverviewOfProject Overview]
  * [Specifications]
  * [InterfaceSketches Interface Sketches]
  * [ProjectHistory Timeline and Deliverables]
