--- a/wiki/DetailedDesignDocumentation.wiki
+++ b/wiki/DetailedDesignDocumentation.wiki
@@ -1,3 +1,62 @@
 #summary Interfaces between modules, Front-end, Back-end
 
-= Coming Soon... =
+= Detailed Architecture =
+
+The architecture of the rulebender is organized on the wiki as dependency graphs for each package.  Each package also has a detailed description and information on how to use the classes in that package.  Where appropriate, there will be additional class dependency graphs. 
+
+The package dependency graphs were acquired with the [http://www.dependency-analyzer.org/ CDA], and I highly recommend using its interactive features to explore the code interaction.  
+
+For more goal oriented information see:
+
+[RandomHowTos Random How-Tos]
+... (more coming soon)
+
+
+== Packages ==
+ * [PackageDependencyRulebenderFull All Packages]
+ * [PackageDependencyRulebenderContactmapModels rulebender.contactmap.models]
+ * [PackageDependencyRulebenderContactmapPrefuse rulebender.contactmap.prefuse]
+ * [PackageDependencyRulebenderContactmapProperties rulebender.contactmap.properties]
+ * [PackageDependencyRulebenderContactmapTest rulebender.contactmap.test]
+ * [PackageDependencyRulebenderContactmapView rulebender.contactmap.view]
+ * [PackageDependencyRulebenderCoreCommands rulebender.core.commands]
+ * [PackageDependencyRulebenderCoreEditorhider rulebender.core.editorhider]
+ * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetControl rulebender.core.prefuse.collinsbubbleset.control]
+ * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetLayout rulebender.core.prefuse.collinsbubbleset.layout]
+ * [PackageDependencyRulebenderCorePrefuseCollinsbubblesetLib rulebender.core.prefuse.collinsbubbleset.lib]
+ * [PackageDependencyRulebenderCorePrefuseNetworkviewerContactmap rulebender.core.prefuse.networkviewer.contactmap]
+ * [PackageDependencyRulebenderCorePrefuseNetworkviewerInfluencegraph rulebender.core.prefuse.networkviewer.influencegraph]
+ * [PackageDependencyRulebenderCorePrefuseNetworkviewer rulebender.core.prefuse.networkviewer]
+ * [PackageDependencyRulebenderCorePrefuse rulebender.core.prefuse]
+ * [PackageDependencyRulebenderCoreUtility rulebender.core.utility]
+ * [PackageDependencyRulebenderCoreWorkspace rulebender.core.workspace]
+ * [PackageDependencyRulebenderEditorsBnga rulebender.editors.bnga]
+ * [PackageDependencyRulebenderEditorsBngaText rulebender.editors.bnga.text]
+ * [PackageDependencyRulebenderEditorsBnglModel rulebender.editors.bngl.model]
+ * [PackageDependencyRulebenderEditorsBngl rulebender.editors.bngl]
+ * [PackageDependencyRulebenderEditorsCommon rulebender.editors.common]
+ * [PackageDependencyRulebenderEditorsNet rulebender.editors.net]
+ * [PackageDependencyRulebenderEditorsSimple rulebender.editors.simple]
+ * [PackageDependencyRulebenderInfluencegraphModels rulebender.influencegraph.models]
+ * [PackageDependencyRulebenderInfluencegraphPrefuse rulebender.influencegraph.prefuse]
+ * [PackageDependencyRulebenderInfluencegraphView rulebender.influencegraph.view]
+ * [PackageDependencyRulebenderNavigatorActions rulebender.navigator.actions]
+ * [PackageDependencyRulebenderNavigatorModel rulebender.navigator.model]
+ * [PackageDependencyRulebenderNavigatorModel2 rulebender.navigator.model2]
+ * [PackageDependencyRulebenderNavigatorViews rulebender.navigator.views]
+ * [PackageDependencyRulebender rulebender]
+ * [PackageDependencyRulebenderPreferences rulebender.preferences]
+ * [PackageDependencyRulebenderPreferencesViews rulebender.preferences.views]
+ * [PackageDependencyRulebenderResultsView rulebender.results.view]
+ * [PackageDependencyRulebenderSimulateBngexecution rulebender.simulate.bngexecution]
+ * [PackageDependencyRulebenderSimulateParameterscan rulebender.simulate.parameterscan]
+ * [PackageDependencyRulebenderSimulate rulebender.simulate]
+ * [PackageDependencyRulebenderSimulateView rulebender.simulate.view]
+ * [PackageDependencyRulebenderSpeciesgraphPrefuse rulebender.speciesgraph.prefuse]
+ * [PackageDependencyRulebenderSpeciesgraphView rulebender.speciesgraph.view]
+ * [PackageDependencyRulebenderSpecieslistView rulebender.specieslist.view]
+ * [PackageDependencyRulebenderTextParserAstreader rulebender.text.parser.astreader]
+ * [PackageDependencyRulebenderViews rulebender.views]
+ * [PackageDependencySimpleArchitecture SimpleArchitecture]
+ * [PackageDependencyZaCoQuirkLayout za.co.quirk.layout]
+ * [PackageDependencyDeRalfebertRcpToolsPreferredperspective de.ralfebert.rcp.tools.preferredperspective]
