--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -59,3 +59,6 @@
  * [TestPlans Testing Plans]
  * [Pitfalls Common Pitfalls]
  * [RandomHowTos Random How-Tos]
+  * [HowToStatusLine Write to Status Line]
+  * [HowToConsole Write to Console]
+  * [HowToAccessViews How to Access Views] 
