Edited wiki page HowToStatusLine through web user interface.

--- a/wiki/HowToStatusLine.wiki
+++ b/wiki/HowToStatusLine.wiki
@@ -1,6 +1,4 @@
-=How To...=
-
-== Change the text on the Status Line ==
+= Change the text on the Status Line =
 
 {{{
 IStatusLineManager statusline = getWindowConfigurer()
@@ -8,4 +6,3 @@ IStatusLineManager statusline = getWindowConfigurer()
 
 statusline.setMessage(null, "Status line is ready");
 }}}
-
