--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -63,3 +63,4 @@
   * [HowToConsole Write to Console]
   * [HowToAccessViews How to Access Views] 
   * [HowToAddView How to Add a View to RuleBender]
+  * [HowToGetBNGLModelAndListenForEditors How to get the BNGL models from editors]
